src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__nested_native_calls.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module

fn _3() { "ok" }

fn _2() {
  try(_3)
}

fn _1() {
  try(_2)
}

fn _0() {
  try(_1)
}

assert_eq(_0(), "ok")

OK
Nil
