src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__not_indexable.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = 0
v[0]
}

ERROR
not a list
3 |  v[0]
  |   ^^^


DISASM:

.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  lidxn r0, r1, 0
  2  ret
