src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__not_indexable_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 0
let i = 0
v[i]

ERROR
this value cannot be indexed
3 |  v[i]
  |   ^^^


DISASM:

.fn @main
  params 0
  stack 3
  .locals
    v = r1
    i = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 0
  2  lidx r0, r1, r2
  3  ret
