src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__panic.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
panic()

ERROR
explicit panic
1 |  panic()
  |  ^^^^^^^


DISASM:

.fn @main
  params 0
  stack 1
  .code
  0  call r0, panic
  1  ret
