src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__parameter_assignment.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn f(v) {
  v = 1
  v
}

let v = 0
v = f(v)
v


OK
Int(1)
