src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__parse_float.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print(parse_float("3.14"))
}

OK
Nil

STDOUT
3.14
