src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__parse_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print(parse_int("100"))
}

OK
Nil

STDOUT
100
