src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__print.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print("hello, world!")
}

OK
Nil

STDOUT
hello, world!
