src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__printf.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
printf("{a} {b} {c}", {a:0, b:"b", c:true})

OK
Nil

STDOUT
0 b true
